Second part partiallay complete

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
 
         <div class="half-width">
 
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Sadrul Himel</span> Website</h1>
+            <h1><span class="blue-highlight">Sadrul Himel</span> Website</h1>
             <h3>Professional Web Developer</h3>
             <p>Hey, This is Sadrul Alam Himel. I have started my journey in web development very passionately. Let's try
-                to
-                solve your problem related to web development. Let's discuss.</p>
+                to solve your problem related to web development. Let's discuss.</p>
+            <a class="profile-link-button" target="_blank" href="https://www.facebook.com/sadrulalamhimel">HIRE ME</a>
 
         </div>
 
@@ -30,6 +30,29 @@
 
 
     </section>
+    <section class="dream-area">
+
+        <div class="half-width">
+
+            <img src="images/himel1.webp" alt="Sadrul's Image">
+        </div>
+
+        <div class="second-half-width">
+
+            <h1>Dream Big</h1>
+
+            <h3>Become a World No. 1 Web Developer</h3>
+            <p class="for-padding">Hey, This is Sadrul Alam Himel. I have started my journey in web development very passionately. Let's try. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos illum ipsum, cumque ab expedita itaque porro incidunt.
+                to solve your problem related to web development. Let's discuss.</p>
+            <a class="profile-link-button" target="_blank" href="https://www.facebook.com/sadrulalamhimel">DOWNLOAD RESUME</a>
+
+        </div>
+
+
+    </section>
+ 
+
+
 
 </body>
 
