Done! but I cannot add gradiant

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <h1>Welcome To</h1>
             <h1><span class="blue-highlight">Sadrul Himel</span> Website</h1>
-            <h3>Professional Web Developer</h3>
+            <h3 class="title-summary">Professional Web Developer</h3>
             <p>Hey, This is Sadrul Alam Himel. I have started my journey in web development very passionately. Let's try
                 to solve your problem related to web development. Let's discuss.</p>
             <a class="profile-link-button" target="_blank" href="https://www.facebook.com/sadrulalamhimel">HIRE ME</a>
@@ -41,7 +41,7 @@
 
             <h1>Dream Big</h1>
 
-            <h3>Become a World No. 1 Web Developer</h3>
+            <h3 class="title-summary">Become a World No. 1 Web Developer</h3>
             <p class="for-padding">Hey, This is Sadrul Alam Himel. I have started my journey in web development very passionately. Let's try. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos illum ipsum, cumque ab expedita itaque porro incidunt.
                 to solve your problem related to web development. Let's discuss.</p>
             <a class="profile-link-button" target="_blank" href="https://www.facebook.com/sadrulalamhimel">DOWNLOAD RESUME</a>
@@ -50,6 +50,41 @@
 
 
     </section>
+
+    <section class="experience-area">
+        <h1 id="exp"> Experiences</h1>
+
+        <div id="full-stack" class="third-half-width">
+
+            <h2> Full Stack Web Developer</h2>
+
+            <h3 class="title-summary">2021-Present | Pro Level Developer</h3>
+            <p class="for-padding">
+                Hey, This is Sadrul Alam Himel. I have started my journey in web development very passionately. Let's try. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos illum ipsum, cumque ab Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi illum mollitia, quasi asperiores earum architecto et veritatis assumenda cum..
+            </p>
+
+
+        </div>
+
+        <div id="baby-web" class="third-half-width">
+
+            <h2>Baby Web Developer</h2>
+
+            <h3 class="title-summary">2020-2021 | Programming Hero Learner</h3>
+            <p class="for-padding">
+                Hey, This is Sadrul Alam Himel. I have started my journey in web development very passionately. Let's try. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos illum ipsum, cumque ab Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi illum mollitia, quasi asperiores earum architecto et veritatis assumenda cum..
+            </p>
+  
+        </div>
+
+
+    </section>
+
+    <footer>
+        <p>
+            © Sadrul Himel 2021, All right reserved.
+        </p>
+    </footer>
  
 
 
